--- a/Signup/Signup.html
+++ b/Signup/Signup.html
@@ -4,10 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Signup</title>
 </head>
 
 <body>
+    <div class="wrapper">
+        <h1>Signup</h1>
+        <form>
+            <div>
+                <input type="text" name="username " id="username" placeholder="User Name">
+            </div>
+            <div>
+                <input type="email" name="email " id="email-input" placeholder="Email">
+            </div>
+            <div>
+                <input type="password" name="password " id="password-input" placeholder="Password">
+            </div>
+        </form>
+    </div>
+
+
 
 </body>
 
