--- a/Signup/Signup.html
+++ b/Signup/Signup.html
@@ -51,7 +51,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                         fill="#000000">
                         <path
-                            d="M240-80q-33 0-56.5-23.5T160-160v-400q0-33 23.5-56.5T240-640h40v-80q0-83 58.5-141.5T480-920q83 0 141.5 58.5T680-720v80h40q33 0 56.5 23.5T800-560v400q0 33-23.5 56.5T720-80H240Zm240-200q33 0 56.5-23.5T560-360q0-33-23.5-56.5T480-440q-33 0-56.5 23.5T400-360q0 33 23.5 56.5T480-280ZM360-640h240v-80q0-50-35-85t-85-35q-50 0-85 35t-35 85v80Z" />
+                            d="M80-200v-80h800v80H80Zm46-242-52-30 34-60H40v-60h68l-34-58 52-30 34 58 34-58 52 30-34 58h68v60h-68l34 60-52 30-34-60-34 60Zm320 0-52-30 34-60h-68v-60h68l-34-58 52-30 34 58 34-58 52 30-34 58h68v60h-68l34 60-52 30-34-60-34 60Zm320 0-52-30 34-60h-68v-60h68l-34-58 52-30 34 58 34-58 52 30-34 58h68v60h-68l34 60-52 30-34-60-34 60Z" />
                     </svg>
                 </label>
                 <input type="password" name="confirm-password " id="confirm-password-input"
@@ -74,7 +74,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                         fill="#000000">
                         <path
-                            d="M560-440h200v-80H560v80Zm0-120h200v-80H560v80ZM200-320h320v-22q0-45-44-71.5T360-440q-72 0-116 26.5T200-342v22Zm160-160q33 0 56.5-23.5T440-560q0-33-23.5-56.5T360-640q-33 0-56.5 23.5T280-560q0 33 23.5 56.5T360-480ZM160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Z" />
+                            d="M160-80q-33 0-56.5-23.5T80-160v-440q0-33 23.5-56.5T160-680h200v-120q0-33 23.5-56.5T440-880h80q33 0 56.5 23.5T600-800v120h200q33 0 56.5 23.5T880-600v440q0 33-23.5 56.5T800-80H160Zm80-160h240v-18q0-17-9.5-31.5T444-312q-20-9-40.5-13.5T360-330q-23 0-43.5 4.5T276-312q-17 8-26.5 22.5T240-258v18Zm320-60h160v-60H560v60Zm-200-60q25 0 42.5-17.5T420-420q0-25-17.5-42.5T360-480q-25 0-42.5 17.5T300-420q0 25 17.5 42.5T360-360Zm200-60h160v-60H560v60ZM440-600h80v-200h-80v200Z" />
                     </svg>
                 </label>
                 <input type="text" name="lastname-input" id="lastname-input" placeholder="Last Name">
@@ -119,23 +119,27 @@
 
             <div>
                 <button type="submit">Signup</button>
-
+            </div>
         </form>
-        <div>
-            <p>
-                Already have an account?<a href="Login.html">Login</a>
-            </p>
+        <div id="Logins">
+            <label for="Logins">
+                <p>
+                    Already have an account?<a href="/HTML/Login.html">Login</a>
+                </p>
+            </label>
+        </div>
+        <div id="terms">
+            <label>
+                <input type="checkbox" name="terms" required>
+                Agree to Terms & Conditions: ผู้ใช้ต้องยอมรับเงื่อนไขการใช้งาน
+            </label>
         </div>
     </div>
-    <div>
-        <label>
-            <input type="checkbox" name="terms" required>
-            Agree to Terms & Conditions: ผู้ใช้ต้องยอมรับเงื่อนไขการใช้งาน
-        </label>
-    </div>
+
 
 
 
 </body>
+
 
 </html>
