--- a/Signup/Signup.html
+++ b/Signup/Signup.html
@@ -12,7 +12,6 @@
     <div class="wrapper">
         <h1>Signup</h1>
         <form>
-
             <div>
                 <label for="username">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
@@ -57,7 +56,6 @@
                 <input type="password" name="confirm-password " id="confirm-password-input"
                     placeholder="Confirm Password">
             </div>
-
             <div>
                 <label for="Firstname-input">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
@@ -131,7 +129,7 @@
         <div id="terms">
             <label>
                 <input type="checkbox" name="terms" required>
-                Agree to Terms & Conditions: ผู้ใช้ต้องยอมรับเงื่อนไขการใช้งาน
+                Agree to Terms & Conditions
             </label>
         </div>
     </div>
