--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -1,20 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Login</title>
+   <link rel="stylesheet" href="../CSS/stlye.css">
+   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
-
 <body>
-    <td>
-        <label for="sssss">test</label>
-    </td>
-    <label for="">HEY!</label>
-    
-    <label for="">test2</label>
+   <div class="wrapper">
+      <form action="">
+         <h1>Login</h1>
+         <div class="input-box">
+            <input type="text" placeholder="Username" required>
+            <i class='bx bx-user' ></i>         
+         </div>
 
+         <div class="input-box">
+            <input type="password" placeholder="Password" required>    
+            <i class='bx bx-lock-alt' ></i>       
+         </div>
+
+         <div class="remember-forgot">
+            <label><input type="checkbox">Remember me</label>
+            <a href="#">Forgot Password?</a>
+         </div>
+
+         <button type="submit" class="btn">Login</button>
+
+         <button  class="Guest">
+            <a href="Content.html">Use as Guest</a>
+         </button>
+
+         <div class="register-link">
+            <p>Don't have an account? 
+               <a href="Signup.html">Register</a>
+            </p>
+         </div>
+      </form>
+   </div>
+   
 </body>
-
 </html>
