--- a/Login/Login.html
+++ b/Login/Login.html
@@ -27,9 +27,9 @@
 
          <button type="submit" class="btn">Login</button>
 
-         <button  class="Guest">
-            <a href="Content.html">Use as Guest</a>
-         </button>
+         <div class="Guest">
+            <a  href="Content.html">Use as Guest</a>
+         </div>
 
          <div class="register-link">
             <p>Don't have an account? 
