--- a/Signup/Signup.html
+++ b/Signup/Signup.html
@@ -122,7 +122,7 @@
         <div id="Logins">
             <label for="Logins">
                 <p>
-                    Already have an account?<a href="/HTML/Login.html">Login</a>
+                    Already have an account?<a href="../Login/Login.html">Login</a>
                 </p>
             </label>
         </div>
