--- a/Signup/Signup.html
+++ b/Signup/Signup.html
@@ -11,7 +11,7 @@
 <body>
     <div class="wrapper">
         <h1>Signup</h1>
-        <form>
+        <form action="">
             <div>
                 <label for="username">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
