--- a/Signup/Signup.html
+++ b/Signup/Signup.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
     <link rel="stylesheet" href="Signup.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
+    <link rel="icon" href="/Content/assest/img/registered-line.svg" type="image/x-icon">
 </head>
 
 <body>
@@ -122,7 +125,7 @@
         <div id="Logins">
             <label for="Logins">
                 <p>
-                    Already have an account?<a href="/HTML/Login.html">Login</a>
+                    Already have an account?<a href="/Login/Login.html">Login</a>
                 </p>
             </label>
         </div>
