fix href complete

--- a/Signup/Signup.html
+++ b/Signup/Signup.html
@@ -119,8 +119,11 @@
 
 
             <div>
-                <button type="submit">Signup</button>
+                <a href="/Content/HTML.html">
+                    <button type="button">Signup</button>
+                </a>
             </div>
+
         </form>
         <div id="Logins">
             <label for="Logins">
