--- a/Login/Login.html
+++ b/Login/Login.html
@@ -34,17 +34,21 @@
             <a href="#">Forgot Password?</a>
          </div>
 
-         <button type="submit" class="btn">Login</button>
 
-            <div class="Guest">
-               <a href="/Content/HTML.html">Use as Guest</a>
-            </div>
 
-            <div class="register-link">
-               <p>Don't have an account?
-                  <a href="/Signup/Signup.html">Register</a>
-               </p>
-            </div>
+         <div class="Guest">
+            <a href="/Content/HTML.html">Login</a>
+         </div>
+
+         <div class="Guest">
+            <a href="/Content/HTML.html">Use as Guest</a>
+         </div>
+
+         <div class="register-link">
+            <p>Don't have an account?
+               <a href="/Signup/Signup.html">Register</a>
+            </p>
+         </div>
       </form>
    </div>
 
